[refactor] Creating single Airflow for everythning.
- Now I have a single Airflow for every PoC.
- Some files have been reorganized.
- Main README was updated.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,4 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./airflow/dags/:/airflow/dags/
-
-  chuck-norris:
-    container_name: chuck-norris
-    build: ./jobs/chuck-norris
-    image: nth/chuck-norris
-    command: 'python /app/main.py -h'
+      - ./ecs/batch-app/devops/dags:/airflow/dags/chuck-norris
